# mytask

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  FEATURES_CHECKLIST.md  Makefile  RTK.md  SECURITY.md  design.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  websocket_plan.md
.husky/: pre-commit
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  schema.prisma  start.sh
backend/app/: main.py  rpc.py
backend/app/adapters/driven/: database.py  http_adapter.py  odoo_adapter.py  prisma_adapter.py  s3_adapter.py
backend/app/adapters/driving/: api_adapter.py  rpc_adapter.py  scheduler_adapter.py  websocket_adapter.py
backend/app/core/: constants.py  i18n.py
backend/app/core/entities/: models.py
backend/app/core/i18n/: en.json  vi.json
backend/app/core/ports/: external_services.py  repository.py
backend/app/core/services/: backup_service.py  odoo_service.py  task_service.py
backend/scripts/: todo_sync.py
backend/tests/: conftest.py  test_api_adapter.py  test_backup_service.py  test_http_adapter.py  test_i18n.py  test_main.py  test_odoo_adapter.py  test_odoo_service.py  test_prisma_adapter.py  test_rpc_adapter.py  test_s3_adapter.py  test_scheduler_adapter.py  test_service.py  test_task_service.py  test_tasks.py  test_websocket.py  test_websocket_adapter.py
frontend/: Dockerfile  Dockerfile.prod  components.json  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  (+1 more)
(+110 files in other folders)
